--- a/src/comercial/frm_principal.form
+++ b/src/comercial/frm_principal.form
@@ -376,7 +376,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Sono Music Import | Sistema de Gestion de Ventas"/>
+    <Property name="title" type="java.lang.String" value="Comercial Pe&#xf1;a | Sistema de Gestion de Ventas"/>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="cc" green="cc" red="cc" type="rgb"/>
     </Property>
