--- a/src/comercial/frm_principal.form
+++ b/src/comercial/frm_principal.form
@@ -3,6 +3,10 @@
 <Form version="1.9" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Container class="javax.swing.JDialog" name="jd_login">
+      <Properties>
+        <Property name="defaultCloseOperation" type="int" value="0"/>
+        <Property name="title" type="java.lang.String" value="Ingresar al Sistema"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -381,7 +385,7 @@
       <Color blue="cc" green="cc" red="cc" type="rgb"/>
     </Property>
     <Property name="iconImage" type="java.awt.Image" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-      <Connection code="Toolkit.getDefaultToolkit().getImage(&quot;reports/logo.png&quot;)" type="code"/>
+      <Connection code="Toolkit.getDefaultToolkit().getImage(&quot;reports/icono.jpg&quot;)" type="code"/>
     </Property>
   </Properties>
   <SyntheticProperties>
@@ -415,7 +419,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <Component id="jDesktopPane1" max="32767" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jToolBar1" alignment="1" min="-2" pref="25" max="-2" attributes="0"/>
                   <Component id="jToolBar3" alignment="1" min="-2" pref="25" max="-2" attributes="0"/>
@@ -447,9 +451,6 @@
         </Component>
         <Component class="javax.swing.JLabel" name="lbl_nom_tienda">
           <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Dialog" size="12" style="0"/>
-            </Property>
             <Property name="text" type="java.lang.String" value="Principal"/>
           </Properties>
         </Component>
@@ -470,9 +471,6 @@
         </Component>
         <Component class="javax.swing.JLabel" name="lbl_empresa">
           <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Dialog" size="12" style="0"/>
-            </Property>
             <Property name="text" type="java.lang.String" value="10469932091 | OYANGUREN GIRON LUIS ENRIQUE"/>
           </Properties>
         </Component>
@@ -1018,9 +1016,6 @@
         </Component>
         <Component class="javax.swing.JLabel" name="lbl_traslados_encontrados">
           <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Dialog" size="12" style="0"/>
-            </Property>
             <Property name="text" type="java.lang.String" value="0"/>
           </Properties>
           <AuxValues>
@@ -1050,9 +1045,6 @@
         </Component>
         <Component class="javax.swing.JLabel" name="lbl_usuario">
           <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Dialog" size="12" style="0"/>
-            </Property>
             <Property name="text" type="java.lang.String" value="loyangureng"/>
           </Properties>
         </Component>
