registro y vistas de documentos de compras

--- a/src/comercial/frm_principal.form
+++ b/src/comercial/frm_principal.form
@@ -716,11 +716,13 @@
                       <Image iconType="3" name="/icons/eccomerce_-_receipt-512.png"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Compras"/>
-                    <Property name="enabled" type="boolean" value="false"/>
                     <Property name="focusable" type="boolean" value="false"/>
                     <Property name="horizontalTextPosition" type="int" value="0"/>
                     <Property name="verticalTextPosition" type="int" value="3"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton10ActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JToolBar$Separator" name="jSeparator11">
                 </Component>
