--- a/src/forms/frm_reg_venta.form
+++ b/src/forms/frm_reg_venta.form
@@ -1052,7 +1052,6 @@
                       <Component id="btn_grabar" alignment="1" max="32767" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                              <Component id="txt_dir_cliente" alignment="0" max="32767" attributes="0"/>
                               <Component id="txt_nom_cliente" alignment="0" max="32767" attributes="0"/>
                               <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -1132,12 +1131,10 @@
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="txt_nom_cliente" min="-2" pref="25" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="txt_dir_cliente" min="-2" pref="25" max="-2" attributes="0"/>
                       </Group>
                       <Component id="btn_actualizar" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
                   <Component id="jPanel4" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
                   <Component id="btn_grabar" min="-2" pref="50" max="-2" attributes="0"/>
@@ -1244,11 +1241,6 @@
             <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txt_nom_clienteFocusGained"/>
             <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txt_nom_clienteKeyPressed"/>
           </Events>
-        </Component>
-        <Component class="javax.swing.JTextField" name="txt_dir_cliente">
-          <Properties>
-            <Property name="enabled" type="boolean" value="false"/>
-          </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="btn_crear_cliente">
           <Properties>
