--- a/src/vistas/frm_ver_clientes.form
+++ b/src/vistas/frm_ver_clientes.form
@@ -86,6 +86,9 @@
               </Table>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="t_clientesMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -119,6 +122,9 @@
             <Property name="verticalAlignment" type="int" value="1"/>
             <Property name="verticalTextPosition" type="int" value="3"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_modificarActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btn_cerrar">
           <Properties>
